--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-  margin: 50px 50px 0 50px;
+  margin: 20px 20px 0 20px;
   background-color: #faf9f6;
   display: flex;
   flex-direction: column;
@@ -54,6 +54,10 @@ img {
 }
 
 @media (max-width: 690px) {
+  body {
+    margin: 10px 10px 0px 10px;
+  }
+  
   h1 {
     margin-top: 10px;
     text-align: center;
@@ -83,5 +87,9 @@ img {
 
   .card-title {
     margin-top: 10px;
+  }
+
+  .logo {
+    font-size: 2rem;
   }
 }
